--- a/src/templates/products/product_detail.html
+++ b/src/templates/products/product_detail.html
@@ -30,9 +30,19 @@
 
 {%  endif %}
 <br />
-<a href="">Add to cart</a>
+<a href="">Добавить в корзину</a>
 <br />
 <br />
+<p>Поделится <br />
+<a href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}">
+<i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i>
+</a>
+<a href="#">
+<i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i>
+</a>
+<a href="#">
+<i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
+</p>
 <h4>Вам может понадобиться</h4>
 </div>
 
