Change price in product_detail.html for different variations by using jquery

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -56,6 +56,12 @@
     </div> <!-- /container -->
 
     {% include "javascript.html" %}
+    <script type="text/javascript">
+    $(document).ready(function() {
+      {%  block jquery %}
+      {% endblock %}
+      });
+    </script>
     
     
   </body>
