--- a/src/templates/products/product_list.html
+++ b/src/templates/products/product_list.html
@@ -2,14 +2,26 @@
 
 {%  block content %}
 
-<table class="table">
-{%  for object in object_list %} <br />
-<tr>
-	<td><a href="{{  object.get_absolute_url }}">{{  object.title }}</a></td>
-</tr>	
+<h2>Вся продукция <small><a href="{%  url 'categories' %}">Категории</a></small></h2>
+<div class='row'>
+{%  for product in object_list %} 
+
+<div class='col-xs-4'>
+	<div class="thumbnail text-center">
+		<h4><a href='{{  product.get_absolute_url }}'>{{  product.title }}</a></h4>
+		{%  if product.get_image_url %}
+		<a href='{{  product.get_absolute_url }}'><img id='img' class='img-responsive' src="{{  product.get_image_url }}"/></a><br />
+		{%  endif %}
+		
+	</div>
+</div>
+				
+		{%  cycle '' '' '</div><div class="row">' %}
+
+
 
 {%  endfor %}
-</table>
+</div>
 
 
 {%  endblock %}
