--- a/src/templates/products/product_detail.html
+++ b/src/templates/products/product_detail.html
@@ -77,14 +77,7 @@ $(".variation-select").change(function() {
 <div class="row">
 	{% for product in related %} 
 	<div class='col-xs-6'>
-		<div class="thumbnail text-center">
-			<h4><a href='{{  product.get_absolute_url }}'>{{  product.title }}</a><br /></h4>
-			{%  if product.get_image_url %}
-			<a href='{{  product.get_absolute_url }}'><img class='img-responsive' src="{{  product.get_image_url }}"></a><br />
-
-			{%  endif %}
-			
-		</div>
+		{%  include "products/product_thumbnail.html" with product=product price="True" %}
 	</div>
 				
 		{%  cycle '' '</div><div class="row"' %}
