--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -14,6 +14,17 @@
 .jumbotron {
 	background-color:#5ACDFF;
 	color: #FFF;
+	{%  if featured_image.make_backround_image %}
+	background-image: url("{{  featured_image.image.url  }}");
+	background-repeat: no-repeat;
+	background-color: #000;
+	background-size: cover;
+	background-position-y: -280px;
+	{%  if featured_image.text_css_color %}
+	color: #{{   featured_image.text_css_color }}
+	{%  endif %}
+	{%  endif %}
+	}
 }
 
 {% endblock %}
@@ -24,24 +35,48 @@
 {% block jumbotron %}
  {% if not request.user.is_authenticated %}
 
+{%  if featured_image %}
 <div class="jumbotron">
- <div class="container">
-	<div class="row">
-		<div class='col-sm-6'>
-		<h1>Try Django 1.8</h1>
-		<p>The MVP Landing project is designed to get your project started. The goal is to help you launch as soon as possible with the least amount of investment using time or money. Join Us today.</p>
-		<p>
-		<a class="btn btn-lg btn-primary" href="" role="button">Join Us &raquo;</a>
-		</p>
-		</div>
-		<div class='col-sm-6' >
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/2uLYO1LUf6Q" frameborder="0" allowfullscreen></iframe>
+	 <div class="container">
+		<div class="row">
+			<div class='col-sm-12 text-center {%  if featured_image.text_right %} pull-right{%  endif %}'>
+			<h1>{{ featured_image.product.title  }}</h1>
+			<p>{{ featured_image.description  }}</p>
+			<p>
+			<a class="btn btn-lg btn-primary" href="{{  featured_image.product.get_absolute_url }}" role="button">Подробнее</a>
+			</p>
+			</div>
+			<div class='col-sm-6' >
+			{%  if not featured_image.make_backround_image %}
+				<img src="{{  featured_image.image.url }}" class='img-responsive' />
+			{%  endif %}	
 
- 		</div>
+	 		</div>
+			</div>
 		</div>
-	</div>
- </div>
- {% endif %}
+	 </div>
+
+	{%  else %}
+	<div class="jumbotron">
+	 <div class="container">
+		<div class="row">
+			<div class='col-sm-6'>
+			<h1>Try Django 1.8</h1>
+			<p>The MVP Landing project is designed to get your project started. The goal is to help you launch as soon as possible with the least amount of investment using time or money. Join Us today.</p>
+			<p>
+			<a class="btn btn-lg btn-primary" href="" role="button">Join Us &raquo;</a>
+			</p>
+			</div>
+			<div class='col-sm-6' >
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/2uLYO1LUf6Q" frameborder="0" allowfullscreen></iframe>
+
+	 		</div>
+			</div>
+		</div>
+	 </div>
+	 {% endif %}
+{%  endif %}
+
 {% endblock %}
 
 
